RESULTS/AutoSpec/raw_results/out-4o-pIp/46_0002/46_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/46_0002/46_merged.c:29:9: error: unterminated comment
   29 |         /*@;
      |         ^
